# cursor-python-template

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  README.md  pyproject.toml  requirements.txt
.cursor/rules/: code-review-rules.mdc  context-detection-rules.mdc  core-rules.mdc  cursor-startup-rules.mdc  documentation-rules.mdc  github-issues-rules.mdc  github-rules.mdc  powershell-rules.mdc  project-plan-management-rules.mdc  project-structure-rules.mdc  python-rules.mdc  testing-rules.mdc
.github/workflows/: ci.yml
docs/: .buildinfo  Makefile  conf.py  customization.html  development_group.html  getting_started_group.html  index.html  index.md  make.bat  objects.inv  project_structure.html  searchindex.js  usage_group.html
docs/_sources/: customization.rst.txt  development_group.rst.txt  index.rst.txt  introduction.rst.txt  overview.rst.txt  project_structure.rst.txt  usage_group.rst.txt
docs/rule_documentation/: ai_integration_group.html  code_review_rules.html  code_standards_group.html  core_rules.html  documentation_rules.html  github_rules.html  group_cursor_integration.html  group_project_workflows.html  index.html  infrastructure_group.html  powershell_rules.html  python_rules.html  security_rules.html  testing_rules.html
scripts/: setup_dev.ps1
site/: .buildinfo  genindex.html  getting_started_group.html  index.html  introduction.html  overview.html  search.html  searchindex.js
template-docs/: Makefile  make.bat
template-sphinx-documentation/: fix_rst_formatting.py  sphinx_warnings.txt
tests/: conftest.py  test_example.py
(+45 files in other folders)
